-- Cabal package for papersite
-- There is a good introduction to writing Cabal files on StackExchange:
--   http://stackoverflow.com/questions/12305970/how-to-make-a-haskell-cabal-project-with-libraryexecutables-that-still-run-with
name:                papersite
version:             0.2.0.0
synopsis:            Site generation tool for JMLR proceedings.

-- A longer description of the package.
description:         
  A Hakyll-based static website generation tool that takes 
  BibTeX descriptions of a conference or workshop proceedings
  and generates a collection of MathJax-enabled pages that
  can be uploaded to http://jmlr.org/proceedings/ .

-- URL for the project homepage or repository.
homepage:            https://github.com/mreid/papersite
license:             MIT
license-file:        LICENSE
author:              Mark Reid
maintainer:          mark.reid@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

-- Source at GitHub
source-repository head
  type:              git
  location:          https://github.com/mreid/papersite

-- Define and export the main modules from src/lib to avoid build-depends repeats
library
  default-language:  Haskell2010
  hs-source-dirs:    src/lib
  exposed-modules:   Site, Paper, Author
  build-depends:       
   base,
   binary,
   containers,
   filepath,
   mtl,
   network,
   parsec,
   regex-compat,
   text,
   utility-ht,
   ---
   hakyll ==4.4.3.*,
   pandoc,
   bibtex,
   latex

-- The main executable depends only on the library modules
executable site
  default-language:  Haskell2010
  hs-source-dirs:    src/exec
  main-is:           Main.hs
  build-depends:     base, papersite

-- The import executable is built as a stand-alone
executable import
 hs-source-dirs:    src/exec
 default-language:  Haskell2010
 main-is:           import.hs

 build-depends:
  base, directory, filepath, parsec,
  bibtex, latex

executable scrape
  hs-source-dirs:	src/exec
  default-language: Haskell2010
  main-is:			scrape.hs

  build-depends:
   base, HandsomeSoup, hxt, tagsoup,
   bibtex, latex, utility-ht,
   hxt-regex-xmlschema, text,
   network, HTTP, directory

executable update
  hs-source-dirs:	src/exec
  default-language: Haskell2010
  main-is:          update.hs
  
  build-depends:
    base, filepath, directory, parsec, bibtex, hxt

-- Testing
test-suite tests
  default-language:    Haskell2010
  hs-source-dirs:      src/test
  type:                exitcode-stdio-1.0
  main-is:             TestSite.hs

  build-depends:  
   base, papersite,
   test-framework, test-framework-hunit, HUnit,
   hakyll
